--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
                     <p class="mensaje-contacto">No dudes en dejarnos un mensaje. Estamos para ayudarte y brindarte la
                         mejor atención. </p>
                     <div class="form-div">
-                        <form class="my-form col-md-8 col-lg-6 col-sm-10 col-sx-12 w-100" id="formularioContacto"
-                            action="https://formspree.io/f/mayvwzoy" method="POST">
+                        <form class="my-form col-md-8 col-lg-6 col-sm-10 col-sx-12 w-100" id="form"
+                            action="https://formspree.io/f/mayvwzoy" method="post">
                             <div class="form-group">
                                 <label for="Nombre"></label>
                                 <input id="nombre" type="text" class="form-control" placeholder="Nombre">
@@ -232,7 +232,7 @@
                                     rows="7" placeholder="Mensaje"></textarea>
                             </div>
                             <div class="div-botonFormContactoSmart">
-                                <button id="btnCrearSuscriptor" type="submit"
+                                <button id="submit" type="submit"
                                     class="button-form btn-block btn-dark btn-sm ">Enviar</button>
                             </div>
                         </form>
@@ -291,9 +291,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js "
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p "
         crossorigin="anonymous "></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js "
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin=" anonymous "></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- mi JS -->
     <script src="./app.js "></script>
 
